--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\asus\\AppData\\Roaming\\NetBeans\\16\\build.properties
+file.reference.mysql-connector-java-5.1.23-bin.jar=D:\\mysql-connector-java-5.1.45.jar
+user.properties.file=C:\\Users\\jolly\\AppData\\Roaming\\NetBeans\\17\\build.properties
